--- a/src/iOS_Lang/en.lproj/Localizable.strings
+++ b/src/iOS_Lang/en.lproj/Localizable.strings
@@ -1610,6 +1610,9 @@
 "Start sound" = "Start sound";
 
 /* No comment provided by engineer. */
+"Start sound and wait" = "Start sound and wait";
+
+/* No comment provided by engineer. */
 "step" = "step";
 
 /* No comment provided by engineer. */
