--- a/src/Catty/Resources/Localization/hi.lproj/Localizable.strings
+++ b/src/Catty/Resources/Localization/hi.lproj/Localizable.strings
@@ -5,6 +5,9 @@
 "A project with the same name already exists, try again." = "A project with the same name already exists, try again.";
 
 /* No comment provided by engineer. */
+"Abc" = "ए बी सी";
+
+/* No comment provided by engineer. */
 "About Catrobat" = "कैटरोबैट के बारे में";
 
 /* No comment provided by engineer. */
