--- a/src/Catty/Resources/Localization/it.lproj/Localizable.strings
+++ b/src/Catty/Resources/Localization/it.lproj/Localizable.strings
@@ -5,6 +5,9 @@
 "A project with the same name already exists, try again." = "Esiste già un programma con lo stesso nome, riprova con uno nuovo.";
 
 /* No comment provided by engineer. */
+"Abc" = "Abc";
+
+/* No comment provided by engineer. */
 "About Catrobat" = "Su Catrobat";
 
 /* No comment provided by engineer. */
