--- a/src/Catty/Resources/Localization/ko.lproj/Localizable.strings
+++ b/src/Catty/Resources/Localization/ko.lproj/Localizable.strings
@@ -5,6 +5,9 @@
 "A project with the same name already exists, try again." = "A project with the same name already exists, try again.";
 
 /* No comment provided by engineer. */
+"Abc" = "글자";
+
+/* No comment provided by engineer. */
 "About Catrobat" = "Catrobat에 대하여";
 
 /* No comment provided by engineer. */
