--- a/src/Catty/Resources/Localization/zh-Hant.lproj/Localizable.strings
+++ b/src/Catty/Resources/Localization/zh-Hant.lproj/Localizable.strings
@@ -5,6 +5,9 @@
 "A project with the same name already exists, try again." = "A project with the same name already exists, try again.";
 
 /* No comment provided by engineer. */
+"Abc" = "字串";
+
+/* No comment provided by engineer. */
 "About Catrobat" = "關於 Catrobat";
 
 /* No comment provided by engineer. */
